--- a/batchlight/build.gradle
+++ b/batchlight/build.gradle
@@ -26,6 +26,9 @@ dependencies {
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.sqlite:sqlite:2.0.1'
 
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.0'
+
     testImplementation 'junit:junit:4.12'
     testImplementation "io.mockk:mockk:1.9"
     testImplementation "org.robolectric:robolectric:4.2"
